--- a/templates/player/show.html.twig
+++ b/templates/player/show.html.twig
@@ -1,30 +1,82 @@
+{% set active = 'player' %}
+
 {% extends 'base.html.twig' %}
 
 {% block title %}Player{% endblock %}
 
 {% block body %}
-    <h1>Player</h1>
+    <div class="container" x-data="playerShow()">
+        <div class="row">
+            <div class="col-sm-6">
+                <h3>Player</h3>
+            </div>
+            <div class="col-sm-6">
+                <a href="{{ path('app_player_index') }}" class="btn btn-sm btn-outline-dark float-end">
+                    <i class="fa-solid fa-list"></i>
+                    &nbsp;Back to list
+                </a>
+                {% if player.isActive %}
+                <a href="{{ path('app_team_show', {'id': player.actualTeam.id}) }}" class="btn btn-sm btn-outline-dark float-end">
+                    <i class="fa-solid fa-users"></i>
+                    &nbsp;Go to Team
+                </a>
+                {% endif %}
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="col-sm-4">
+                <h5 class="text-decoration-underline">Base information</h5>
+                <h6><strong>Name:</strong> {{ player.name }}</h6>
+                <h6><strong>Country:</strong> {{ player.surname }}</h6>
+            </div>
+            <div class="col-sm-4">
+                <h5 class="text-decoration-underline">Actual team</h5>
+                {% if player.isActive %}
+                    <h6><strong>Name:</strong> {{ player.actualTeam.name }}</h6>
+                    <h6><strong>Country:</strong> {{ player.actualTeam.country }}</h6>
+                {% else %}
+                    <h6><strong>Player is free now</strong></h6>
+                {% endif %}
+            </div>
+            <div class="col-sm-4">
+                <h6 class="text-decoration-underline"><strong>Bids Total:</strong>&nbsp;<span x-text="{{ player.countActiveBids}}"></span>
+                </h6>
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <ul class="nav nav-tabs">
+                <li class="nav-item">
+                    <a class="nav-link" x-ref="active" :class="{ 'active': showBids }" @click.prevent="showBids = true; showHistory = false">
+                        All bids
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" x-ref="inactive" :class="{ 'active': showHistory }" @click.prevent="showBids = false; showHistory = true">
+                        History
+                    </a>
+                </li>
+            </ul>
+            <div class="col-sm-12" x-show="showBids">
+                {% set vars = {
+                    playerTeamId: player.actualActiveStatus.id,
+                    maxValue: 5,
+                    action: true,
+                } %}
+                {% include 'bids/list.html.twig' with vars %}
+            </div>
+            <div class="col-sm-12" x-show="showHistory">
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ player.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ player.name }}</td>
-            </tr>
-            <tr>
-                <th>Surname</th>
-                <td>{{ player.surname }}</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <a href="{{ path('app_player_index') }}">back to list</a>
-
-    <a href="{{ path('app_player_edit', {'id': player.id}) }}">edit</a>
-
-    {{ include('player/_delete_form.html.twig') }}
+            </div>
+        </div>
+    </div>
+    <script type="application/javascript">
+        function playerShow() {
+            return {
+                showBids: true,
+                showHistory: false,
+            }
+        }
+    </script>
 {% endblock %}
